--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -3,7 +3,7 @@
 {% block padded_content_block %}
 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
     <li class="nav-item">
-        <a class="nav-link active" data-toggle="pill" href="#planets" role="tab" aria-controls="planet" aria-selected="true">Planet</a>
+        <a class="nav-link active" data-toggle="pill" href="#planets" role="tab" aria-controls="planets" aria-selected="true">Planet</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" data-toggle="pill" href="#solar_systems" role="tab" aria-controls="solar_systems"
@@ -20,15 +20,15 @@
             <button type="submit" class="btn btn-primary">Update</button>
         </div>
     </div>
-
 </form>
 <div class="tab-content">
+    <div class="tab-pane active" id='planets' role="tabpanel" aria-labelledby="planet">
+        {% include 'planet/planettemplate.html' %}
+    </div>
+    <div class="tab-pane fade" id='solar_systems' role="tabpanel" aria-labelledby="solar_system">
+        {% include 'planet/solartemplate.html' %}
 
-    {% include 'planet/planettemplate.html' %}
+    </div>
 </div>
-<div class="tab-pane fade" id='solar_systems' role="tabpanel" aria-labelledby="solar_system">
-{% include 'planet/solartemplate.html' %}
 
-
-</div>
 {% endblock %}
