Edited the fading for leaderboard

--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -22,7 +22,7 @@
     </div>
 </form>
 <div class="tab-content">
-    <div class="tab-pane active" id='planets' role="tabpanel" aria-labelledby="planet">
+    <div class="tab-pane fade show active" id='planets' role="tabpanel" aria-labelledby="planet">
         {% include 'planet/planettemplate.html' %}
     </div>
     <div class="tab-pane fade" id='solar_systems' role="tabpanel" aria-labelledby="solar_system">
