--- a/templates/planet/navbar.html
+++ b/templates/planet/navbar.html
@@ -7,6 +7,11 @@
                     <i class="fas fa-user"></i> My Account
                 </a>
             </li>
+			<li class="nav-item">
+                <a class="nav-link" href="{% url 'create_system' user.username %}">
+                    <i class="fas fa-plus" aria-hidden="true"></i> Create solar system
+                </a>
+            </li>
             {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">
