Edited some forms of the errors

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,11 +2,12 @@
 {% block content_block %}
 <div class="d-flex justify-content-center h-100">
 <div class="card">
+<div class='card-header'>
+404 
+</div>
 <div class="card-body">
-    404 Error </br>
-    The page you want to acces has been destroyed by a massive Black Hole !
-    {{ exception }}
-  </div>
+    The page you want to access has been destroyed by a massive Black Hole !
+</div>
 </div>
 </div>
 {% endblock content_block %}
