--- a/templates/500.html
+++ b/templates/500.html
@@ -2,8 +2,10 @@
 {% block content_block %}
 <div class="d-flex justify-content-center h-100">
 <div class="card">
+<div class='card-header'>
+500 
+</div>
 <div class="card-body">
-    500 error</br>
     We seemed to have run in a technical Problem...</br>
     Let us call in the alien to solve it !!
   </div>
