--- a/templates/planet/view_user.html
+++ b/templates/planet/view_user.html
@@ -18,11 +18,8 @@
         <div class="col-2">
             {% if username == user %}
             <br><a href="{% url 'edit_user' user.username %}" class="btn btn-primary" role="button">Edit</a>
-            <form method="POST" action="{% url 'delete_user' user.username %}">
-                {% csrf_token %}
-                <input type="submit" value="delete" class="btn btn-danger">
-            </form>
-            <a href="{% url 'create_system' user.username %}" class="btn btn-primary flex-wrap" role="button">create system</a>
+            <a href="{% url 'delete_user' user.username %}" class="btn btn-danger">Delete user</a>
+            <a href="{% url 'create_system' user.username %}" class="btn btn-primary flex-wrap" role="button">Create system</a>
             {% endif %}
         </div>
     </div>
