--- a/templates/planet/view_system.html
+++ b/templates/planet/view_system.html
@@ -36,11 +36,11 @@
                             <a href="{% url 'view_user' system.user %}">{{system.user}}</a></h4>
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-8 ">
                         <div class="row d-flex align-items-center justify-content-center">
                             <h4>Description : </h4>
                         </div>
-                        <div class="row d-flex align-items-center justify-content-center flex-wrap">
+                        <div class="row d-inline-flex align-items-center justify-content-center ">
                             {{system.description}}
                         </div>
                     </div>
