--- a/templates/planet/about.html
+++ b/templates/planet/about.html
@@ -1,25 +1,22 @@
 {% extends 'planet/base.html' %}
 {% load staticfiles %}
 
-{% block padded_content_block %}
+{% block content_block %}
 
-
-<div class="text-light" >
-<center>
-<div style="width: 500px">
-				<h1 class="my-3">About us </h1>
-				<p>WadThePlanet is a project made for educational purposes as part of the WAD2 coursework.
-					The objective of our application is to provide space enthusiasts a
-					place to express their imagination about what distant planets might
-					look like. It is easy to get started even for users who are not proficient
-					in 3D modelling or digital art.</p>
-				<p>Any technical information regarding this project can be found at its GitHub repository.</p>
-				<a href="https://github.com/09ubberboy90/planetWad" target="_blank" class="btn btn-sm btn-outline-primary"><i class="fab fa-fw fa-github"></i> GitHub repository</a>
-
+<div class="row justify-content-center ">
+<div class="text-light col-md-6 col-sm-8">
+    <h1>About us </h1>
+    WadThePlanet is a project made for educational purposes as part of the WAD2 coursework.
+    The objective of our application is to provide space enthusiasts a
+    place to express their imagination about what distant planets might
+    look like. It is easy to get started even for users who are not proficient
+    in 3D modelling or digital art. <br>
+    Any technical information regarding this project can be found at its GitHub repository.
+    <br><a href="https://github.com/09ubberboy90/planetWad" target="_blank" class="btn btn-sm btn-outline-primary">
+    <i class="fab fa-fw fa-github"></i> GitHub repository</a>
 </div>
-</center>
 </div>
 
 
 
-{% endblock padded_content_block %}
+{% endblock content_block %}
