--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_tags %}
 {% block padded_content_block %}
 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item pill-leaderboard">
         <a class="nav-link active" data-toggle="pill" href="#planets" role="tab" aria-controls="planets" aria-selected="true">Planet</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item pill-leaderboard">
         <a class="nav-link" data-toggle="pill" href="#solar_systems" role="tab" aria-controls="solar_systems"
             aria-selected="false">Solar Systems</a>
     </li>
