--- a/templates/planet/planettemplate.html
+++ b/templates/planet/planettemplate.html
@@ -1,21 +1,31 @@
 <div class="tab-pane fade show active" id="planets" role="tabpanel" aria-labelledby="planets">
+
 <div class="card">
         <div class="card-body">
             <div class="row">
-                <div class="col-3">
+                {% if page == 'leaderboard' %}
+                <div class="col-1">
+                {% else %}
+                <div class="col-3"> 
+                {% endif %}
                     Preview
                 </div>
                 <div class="col-3">
                     Planet name
                 </div>
-                <div class="col-3">
-                    {% if page == 'leaderboard' %}
+                {% if page == 'leaderboard' %}
+                <div class="col-3">                
                     Solar System
-                    {% else %}
-                    Owner
-                    {% endif %}
                 </div>
+                {% endif %}
                 <div class="col-3">
+                    Owner
+                </div>
+                {% if page == 'leaderboard' %}
+                <div class="col-2">
+                {% else %}
+                <div class="col-3">
+                {% endif %}
                     Score
                 </div>
             </div>
@@ -27,24 +37,34 @@
 <div class="card">
     <div class="card-body">
         <div class="row">
-            <div class="col-3">
+            {% if page == 'leaderboard' %}
+            <div class="col-1">
+            {% else %}
+            <div class="col-3"> 
+            {% endif %}
                 <img id="initial-texture" src="{{ MEDIA_URL }}{{ planet.texture }}" heigth='68' width='68'/>
             </div>
             <div class="col-3">
                 <a href="{% url 'view_planet' planet.solarSystem.user.username planet.solarSystem.name planet.name %}">{{ planet.name }}</a>
             </div>
+            {% if page == 'leaderboard' %}
             <div class="col-3">
-                {% if page == 'leaderboard' %}
                 <a href="{% url 'view_system' planet.solarSystem.user.username planet.solarSystem.name %}">{{ planet.solarSystem.name }}</a>
-                {% else %}
-                <a href="{% url 'view_user' planet.solarSystem.user.username %}">{{ planet.solarSystem.user.username }}</a>
-                {% endif %}
             </div>
+            {% endif %}
             <div class="col-3">
+                <a href="{% url 'view_user' planet.solarSystem.user.username %}">{{ planet.solarSystem.user.username }}</a>
+            </div>
+            {% if page == 'leaderboard' %}
+            <div class="col-2">
+            {% else %}
+            <div class="col-3">
+            {% endif %}
                 {{planet.score}}
             </div>
         </div>
     </div>
 </div>
 {% endfor %}
+
 </div>
